Fix Website layout broken on mobile devices

--- a/site/src/styl/index.styl
+++ b/site/src/styl/index.styl
@@ -11,8 +11,9 @@ section.main
 
     .heading
         flex-direction column
-        height 40vh
+        min-height 40vh
         text-align center
+        margin 2vh
 
         h1
             font-size 3rem
